yoshimi 2.3.1 M

[presets]
BugFix: CLI attempting to copy/save nonexistent addSynth Mod elements!
CLI has more checks for sections being active.

[presets]
Removed overcautious section disabling and re-enabling.
Changed all references to 'MIDI-Learn' in this file to the same format.
It was getting hard to keep track of them.

2023-10-14 Will
bn 2270
BugFix: unified presets 'load addvoice' clearing whole of addsynth :(

2023-10-02 Will
bn 2269
BugFix: Command line prompt position not working.
BugFix: CLI not enabling scales but seeming to do so.
Add CLI warning when scales not enabled but scale action attempted.
Improved some CLI failure messages.
Added detail to CLI scales messages.
Updated docs.
Updated examples.
Set release version 2.3.1

2023-9-26 Will
bn 2268
Revised and simplified CLI scales code.
Register and save formal octave size, but unused.
Improved CLI handling of scale name and comment fields.
Set rc version 2.3.1 rc3

2023-9-20 Will
Updated HTML user guide microtonal entry.
No code changes.

2023-9-18 Will
bn 2267
Further refinements to microtonal code.
Keymap size now explicitly set (not defined by map entries).
Updated /dev_notes/Yoshimi Control Numbers.ods
Set rc version 2.3.1 rc2

2023-9-9 Will
bn 2266
Forgot to update banks version :(
Fixed regression: version change not updating bank details,
Yoshimi now reports instrument file minor point versions.
Small XML cleanups.
Set rc version 2.3.1 rc1

2023-9-8 Will
bn 2265
Added instrument 'type' corrections supplied by Alex

2023-9-7 Will
bn 2264
BugFix: Had inadvertently deleted a line in mapping :(
Further general Microtonal cleanups.

2023-9-6 Will
bn 2263
BugFix: Left some test code in place.

2023-9-5 Will
bn 2262
Moved setting global fine detune out of setting part maps.
    It only needs to change when the control is moved!
Testing for first and last note now done in part.
    You no longer need to do a retune if these are changed.

2023-9-3 Will
bn 2261