@@ -187,6 +187,9 @@ namespace TOPLEVEL // usage TOPLEVEL::section::vector
             Write = 64,
             Integer = 128 // false = float
         };
+        const int List = Adjust; // all entries
+        const int Copy = LearnRequest; // to file
+        const int Paste = Learnable; // to section
     }
 
     namespace action {
